# swagger.yml
@@ -50,7 +50,7 @@ components:
 paths:
   /user:
     get:
-      operationId: "user.read_all"
+      operationId: "user.read_all_users"
       tags:
         - "User"
       summary: "Read the list of users"
@@ -59,7 +59,7 @@ paths:
           description: "Sucessfully read user list"
 
     post:
-      operationId: "user.register"
+      operationId: "user.register_user"
       tags:
         - "User"
       summary: "Create a new user"
@@ -76,7 +76,7 @@ paths:
           description: "Sucessfully created user"  
   /user/{user_id}:
     get:
-      operationId: "user.read"
+      operationId: "user.read_user"
       tags:
         - "User"
       summary: "Read one user"
@@ -118,7 +118,7 @@ paths:
   
   /user/{user_id}:
     get:
-      operationId: "user.read"
+      operationId: "user.read_user"
       tags:
         - "User"
       summary: "Read one user"
@@ -131,7 +131,7 @@ paths:
     patch:
       tags:
         - "User"
-      operationId: "user.update"
+      operationId: "user.update_user"
       summary: "Update a user"
       parameters:
         - $ref: "#/components/parameters/user_id"
@@ -147,7 +147,7 @@ paths:
     delete:
       tags:
         - "User"
-      operationId: "user.delete"
+      operationId: "user.delete_user"
       summary: "Delete a user"
       parameters:
         - $ref: "#/components/parameters/user_id"
@@ -158,7 +158,7 @@ paths:
 
   /event/{user_id}:
     get:
-      operationId: "event.read_all"
+      operationId: "event.read_all_events"
       tags:
         - "Event"
       summary: "Read the list of events"
@@ -166,7 +166,7 @@ paths:
         "200":
           description: "Sucessfully read event list"
     post:
-      operationId: "event.create"
+      operationId: "event.create_event"
       tags:
         - "Event"
       summary: "Create a new event"
@@ -184,7 +184,7 @@ paths:
 
   /event/{event_id}:
     get:
-      operationId: "event.read"
+      operationId: "event.read_event"
       tags:
         - "Event"
       summary: "Read one event"
@@ -197,7 +197,7 @@ paths:
     put:
       tags:
         - "Event"
-      operationId: "event.update"
+      operationId: "event.update_event"
       summary: "Update a event"
       parameters:
         - $ref: "#/components/parameters/event_id"
@@ -214,7 +214,7 @@ paths:
     delete:
       tags:
         - "Event"
-      operationId: "event.delete"
+      operationId: "event.delete_event"
       summary: "Delete a event"
       parameters:
         - $ref: "#/components/parameters/event_id"
